@@ -8,31 +8,19 @@
   <tesng.version>6.11</tesng.version>
   </properties>
   <build>
-   <plugins>
+    <plugins>
     <plugin>
-   <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
-                <executions>
-                    <execution>
-                        <configuration>
-                            <forkCount>3</forkCount>
-                            <reuseForks>true</reuseForks>
-                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-                            <testFailureIgnore>true</testFailureIgnore>
-                            <includes>
-                                <includesFile>**/*Test.java</includesFile>
-                            </includes>
-                        </configuration>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-    </plugins>
-   </build>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.20.1</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+   </plugins>
+</build>
   <dependencies>
   	<dependency>
   		<groupId>org.seleniumhq.selenium</groupId>
